# BandwithLimiter

./: .clang-format  .gitignore  BUILD.md  BUILD_WINDOWS.md  CMakeLists.txt  LICENSE  README.md  build-windows.sh
.github/workflows/: build-windows.yml
src/: BandwidthController.cpp  BandwidthController.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NumericTableWidgetItem.h  ProcessInfo.h  main.cpp
src/platform/windows/: NetworkThrottler.cpp  NetworkThrottler.h  ProcessMonitor.cpp  ProcessMonitor.h
